isNavCollapse now seems to be working correctly after changing @media (max-width 992)

--- a/app/styles/_bootstrapOverrides.scss
+++ b/app/styles/_bootstrapOverrides.scss
@@ -4,8 +4,8 @@
 }
 /*jeff - this is added to change breakpoint for ipad size (sm)*/
 
-@media (max-width: 1200px) {
-    .navbar-header {
+@media (max-width: 992px) {
+    .navbar-header {gi
         float: none;
     }
     .navbar-left,.navbar-right {
